--- a/asset/css/index.css
+++ b/asset/css/index.css
@@ -10,3 +10,30 @@
     background-position: 20%;
     height: 100vh;
 }
+
+/* hero */
+.hero{
+    height: calc(100vh - 60px);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    color: white;
+}
+
+@media (max-width: 992px) {
+    .hero img{
+        width: 400px;
+    }
+}
+@media (max-width: 992px) {
+    .hero img{
+        width: 400px;
+    }
+}
+@media (max-width: 576px) {
+    .hero img{
+        width: 300px;
+    }
+}
