--- a/asset/css/index.css
+++ b/asset/css/index.css
@@ -78,3 +78,11 @@ main{
     color: white;
 }
 /* End Description */
+
+/* Start Footer */
+.mainfooter{
+    width: 100%;
+    height: 50px;
+    background-color: #6351ce;
+}
+/* End Footer */
