--- a/view/main.html
+++ b/view/main.html
@@ -6,8 +6,8 @@
     <title>Pameran</title>
 
     <!-- CSS -->
-    <link rel="stylesheet" href="asset/css/main.css">
-    <link rel="stylesheet" href="asset/bootstrap/bootstrap-5.3.2-dist/css/bootstrap.css">
+    <link rel="stylesheet" href="../asset/css/main.css">
+    <link rel="stylesheet" href="../asset/bootstrap/bootstrap-5.3.2-dist/css/bootstrap.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
     <!-- font Awesome -->
@@ -22,8 +22,8 @@
                 <!-- Start Navbar -->
                   <nav class="navbar navbar-expand-lg">
                       <div class="container-fluid">
-                        <img src="asset/img/LogoSmk.png" class=" mt-2 ms-1" width="70" alt="">
-                        <img src="asset/img/LogoRPL.png" class="mt-2" width="60" alt="">
+                        <img src="../asset/img/LogoSmk.png" class=" mt-2 ms-1" width="70" alt="">
+                        <img src="../asset/img/LogoRPL.png" class="mt-2" width="60" alt="">
                         <div class="ms-auto">
                           <div class="navbar-nav mt-2 pe-3 d-flex flex-row gap-3">
                             <a class="nav-link active text-white fw-bold" aria-current="page" href="#">About</a>
@@ -36,7 +36,7 @@
 
                   <!-- Start Content  -->
                     <div class="hero">
-                      <img src="asset/img/PameranLogo.png" width="500" alt="">
+                      <img src="../asset/img/PameranLogo.png" width="500" alt="">
                       <p>Lorem ipsum, dolor sit amet consectetur <br> adipisicing elit. Eligendi, quod.</p>
                       <a href="view/gamepage.html" class="btn btn-warning fw-bold">Lihat Game</a>
                     </div>
@@ -49,21 +49,21 @@
                   <div class="row justify-content-center col-xl-12 col-12 col-md-12 col-sm-12 mt-5 gap-2 mx-auto">
                       <div class="row justify-content-center col-xl-4 col-12 col-sm-12 col-md-4 mb-5">
                           <div class="des">
-                            <img src="asset/img/deskripsi.png" class="mb-3" width="100" alt="">
+                            <img src="../asset/img/deskripsi.png" class="mb-3" width="100" alt="">
                             <h3 class="fw-bold">Deskripsi</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis a veniam enim facere nemo obcaecati dolores optio nihil. Aperiam officiis aliquid beatae perspiciatis? Doloribus nemo, vero omnis voluptatibus animi eum!</p>
                           </div>
                       </div>
                       <div class="row justify-content-center col-xl-4 col-12 col-sm-12 col-md-4">
                           <div class="tujuan">
-                            <img src="asset/img/deskripsi.png" class="mb-3" width="100" alt="">
+                            <img src="../asset/img/deskripsi.png" class="mb-3" width="100" alt="">
                             <h3 class="fw-bold">Tujuan</h3>
                             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequatur natus nesciunt quisquam debitis aspernatur consectetur voluptatem, esse iste reprehenderit quia.</p>
                           </div>
                       </div>
                       <div class="row justify-content-center col-xl-4 col-12 col-sm-12 col-md-4">
                           <div class="latar">
-                            <img src="asset/img/deskripsi.png" class="mb-3" width="100" alt="">
+                            <img src="../asset/img/deskripsi.png" class="mb-3" width="100" alt="">
                             <h3 class="fw-bold">Latar Belakang</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero mollitia ratione adipisci! Enim aliquam perspiciatis non tenetur quisquam temporibus libero culpa sint blanditiis labore amet, esse autem vero deleniti totam?</p>
                           </div>
@@ -157,7 +157,7 @@
     </section>
 
     <!-- Java Script -->
-    <script src="asset/bootstrap/bootstrap-5.3.2-dist/js/bootstrap.js"></script>
+    <script src="../asset/bootstrap/bootstrap-5.3.2-dist/js/bootstrap.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
 </html>
