--- a/view/main.html
+++ b/view/main.html
@@ -38,7 +38,7 @@
                     <div class="hero">
                       <img src="../asset/img/PameranLogo.png" width="500" alt="">
                       <p>Lorem ipsum, dolor sit amet consectetur <br> adipisicing elit. Eligendi, quod.</p>
-                      <a href="view/gamepage.html" class="btn btn-warning fw-bold">Lihat Game</a>
+                      <a href="gamepage.html" class="btn btn-warning fw-bold">Lihat Game</a>
                     </div>
                   <!-- End Content -->
             </div>
