--- a/asset/css/index.css
+++ b/asset/css/index.css
@@ -1,13 +1,234 @@
-*{
+body{
     margin: 0;
-    padding: 0;
-    box-sizing: border-box;
 }
 
-.parallax{
+/* HomePage */
+.banner{
+    height: 100vh;
     position: relative;
-    display:  flex;
+    overflow: hidden;
+}
+
+.banner .bg{
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    background-size: auto 100%;
+    background-position: center bottom;
+    transition: 0.5s;
+}
+
+.banner .bg-1{
+    background: url('../img/ParallaxBackground/background.png');
+    background-repeat: no-repeat;
+}
+.banner .bg-2{
+    background: url('../img/ParallaxBackground/tree-left.png');
+    background-repeat: no-repeat;
+}
+.banner .bg-3{
+    background: url('../img/ParallaxBackground/tree-right.png');
+    background-repeat: no-repeat;
+}
+.banner .bg-4{
+    background: url('../img/ParallaxBackground/gate-left.png');
+    background-repeat: no-repeat;
+    position: fixed;
+    transform: translateX(-282px);
+}
+.banner .bg-5{
+    background: url('../img/ParallaxBackground/gate-right.png');
+    background-repeat: no-repeat;
+    position: fixed;
+    transform: translateX(305px);
+}
+.banner .bg-6{
+    background: url('../img/ParallaxBackground/grass.png');
+    background-repeat: no-repeat;
+}
+
+.banner h1{
+    color: #1b283a;
+    text-shadow: 2px 4px 5px #f9f9f9;
+    position: absolute;
+    top: 50%;
+    left: 0;
+    width: 100%;
+    text-align: center;
+    font-size: 7rem;
+    font-family: Pacifico;
+    transition: 0.5s;
+}
+/* End HomePage */
+
+@media screen and (max-width: 768px) {
+    .banner{
+        background-position: 50%;
+    }
+
+    .banner .bg-1{
+        background-position: 50%;
+    }
+    .banner .bg-2{
+        transform: translateX(-150px);
+
+    }
+    .banner .bg-3{
+        transform: translateX(2700px);
+    }
+.banner .bg-4{
+    background: url('../img/ParallaxBackground/gate-left.png');
+    background-repeat: no-repeat;
+    position: fixed;
+    transform: translateX(-282px);
+}
+.banner .bg-5{
+    background: url('../img/ParallaxBackground/gate-right.png');
+    background-repeat: no-repeat;
+    position: fixed;
+    transform: translateX(305px);
+}
+.banner .bg-6{
+    background: url('../img/ParallaxBackground/grass.png');
+    background-repeat: no-repeat;
+}
+
+.banner h1{
+    color: #1b283a;
+    text-shadow: 2px 4px 5px #f9f9f9;
+    position: absolute;
+    top: 50%;
+    left: 0;
+    width: 100%;
+    text-align: center;
+    font-size: 7rem;
+    font-family: Pacifico;
+    transition: 0.5s;
+}
+/* End HomePage */
+
+}
+
+
+
+
+/* header{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding: 30px 100px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    z-index: 100;
+}
+
+.logo{
+    font-size: 2em;
+    color: #fff;
+    user-select: none;
+}
+
+.navigation a{
+    position: relative;
+    font-size: 1.1em;
+    color: #fff;
+    font-weight: 600;
+    text-decoration: none;
+    margin-left: 20px;
+    padding: 6px 15px;
+    transition: .5s;
+}
+
+.navigation a:hover,
+.navigation a.active{
+    color: #333;
+}
+
+.navigation a span{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100;
+    background: #fff;
+    border-radius: 30px;
+    z-index: -1;
+    transform: scale(0);
+    opacity: 0;
+    transition: .5s;
+}
+
+.navigation a:hover span,
+.navigation a.active span{
+    transform: scale(1);
+    opacity: 1;
+} */
+
+/* .parallax{
+    position: relative;
+    display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
+    background: url('../img/ParallaxBackground/background.png') no-repeat;
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
 }
+
+#text{
+    position: absolute;
+    font-size: 5em;
+    color: #1b283a;
+    text-shadow: 2px 4px 5px #f9f9f9;
+}
+
+.parallax img{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    pointer-events: none;
+}
+
+.parallax img#gate-left{
+    position: fixed;
+    transform: translateX(-282px);
+}
+.parallax img#gate-right{
+    position: fixed;
+    transform: translateX(305px);
+}
+
+
+
+} */
+
+.sec{
+    position: relative;
+    background: #020912;
+    padding: 30px 100px;
+}
+
+.sec h2{
+    font-size: 3em;
+    color: #fff;
+    margin-bottom: 10px;
+}
+
+.sec p{
+    font-size: 1em;
+    color: #fff;
+    font-weight: 300;
+    text-align: justify;
+}
+
+
+
+
+
+
