--- a/asset/css/index.css
+++ b/asset/css/index.css
@@ -67,6 +67,7 @@ body{
 @media screen and (max-width: 768px) {
     .banner{
         background-position: 50%;
+        width: 100%;
     }
 
     .banner .bg-1{
